# fast_log

./: Cargo.toml
src/: main.rs
